Fix spacing of buttons in top bar
[MAILPOET-3253]

--- a/assets/css/src/components-form-editor/_header.scss
+++ b/assets/css/src/components-form-editor/_header.scss
@@ -7,14 +7,3 @@
     padding: 0 12px;
   }
 }
-
-.mailpoet-preview-button {
-  margin-right: 6px;
-}
-
-.edit-post-header__toolbar {
-  .toolbar {
-    align-items: center;
-    display: inline-flex;
-  }
-}
